# qmmp

./: .gitignore  CHANGELOG  INSTALL.sh  PKGBUILD  README.md
src/qmmp-2.5.0/src/plugins/General/statusicon/: CMakeLists.txt
src/qmmp-2.5.0/src/plugins/General/statusicon/statusicon_autogen/: deps  moc_predefs.h
src/qmmp-2.5.0/src/plugins/General/statusicon/statusicon_autogen/4UGIYD6VGQ/: qrc_tray_images.cpp
src/qmmp-2.5.0/src/plugins/General/statusicon/statusicon_autogen/EWIEGA46WW/: moc_qmmptrayicon.cpp  moc_qmmptrayicon.cpp.d  moc_statusicon.cpp  (+9 more)
src/qmmp-2.5.0/src/plugins/General/statusicon/translations/: statusicon_plugin_de.qm  statusicon_plugin_de.ts  statusicon_plugin_ja.qm  statusicon_plugin_ja.ts
src/qmmp-2.5.0/src/plugins/Input/sid/: CMakeLists.txt  decoder_sid.cpp  decoder_sid.h  sid.pro  sidhelper.cpp  sidsettingsdialog.cpp  sidsettingsdialog.ui
src/qmmp-2.5.0/src/plugins/Input/sid/sid_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
src/qmmp-2.5.0/src/plugins/Input/sid/translations/: sid_plugin_bg.ts  sid_plugin_cs.ts  sid_plugin_de.ts  sid_plugin_el.ts  sid_plugin_en.ts  sid_plugin_es.ts  sid_plugin_fi.ts  sid_plugin_fr.ts  sid_plugin_gl_ES.ts  sid_plugin_he.ts  sid_plugin_hu.ts  sid_plugin_id.ts  sid_plugin_it.ts  sid_plugin_ja.ts  sid_plugin_kk.ts  sid_plugin_ko.ts  sid_plugin_lt.ts  sid_plugin_nl.ts  sid_plugin_pl_PL.ts  sid_plugin_pt.ts  sid_plugin_pt_BR.ts  sid_plugin_ru.ts  sid_plugin_sk.ts  sid_plugin_sr_BA.ts  sid_plugin_sr_RS.ts  sid_plugin_sv.ts  sid_plugin_tr.ts  sid_plugin_uk_UA.ts  sid_plugin_zh_CN.ts  sid_plugin_zh_TW.ts
(+1160 files in other folders)
